# stark-v

./: .cspell.json  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PLAN.md  PROMPT.md  README.md  SECURITY.md  airs.md  cspell.yaml  design.md  design2.md  out.txt  ralph.py  rust-toolchain.toml
crates/air/: Cargo.toml
crates/air/src/: clock.rs  instructions.rs  lib.rs  merkle.rs  poseidon2.rs  relations.rs  schema.rs  trace.rs
crates/air/src/preprocessed/: mod.rs
crates/air/tests/: clock_layout.rs
crates/bench-cli/: Cargo.toml
crates/bench-cli/src/: main.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: cli_tests.rs
crates/prover/: Cargo.toml  README.md
crates/prover/benches/: comprehensive.rs  fibonacci.rs
crates/prover/src/: commitment.rs  e2e.rs  errors.rs  lib.rs  logup_macros.rs  macros.rs  main.rs  poseidon2_channel.rs  precompile.rs  preprocessed.rs  prover.rs  public_data.rs  relations.rs  test_utils.rs  verifier.rs  witness.rs
crates/prover/src/components/: mem_clock_update.rs  memory.rs  merkle.rs  mod.rs  poseidon2.rs  preprocessed.rs  program.rs  reg_clock_update.rs
crates/prover/src/components/alu/: mod.rs
crates/prover/src/components/alu/add/: air.rs  columns.rs  tests.rs  witness.rs
crates/prover/src/components/alu/and/: air.rs  columns.rs  mod.rs  tests.rs  witness.rs
crates/prover/src/components/branch/: mod.rs
crates/prover/src/components/jump/: mod.rs
crates/prover/src/components/mem_clock_update/: air.rs  columns.rs  mod.rs  witness.rs
crates/prover/src/components/memory/: air.rs  columns.rs  mod.rs  witness.rs
crates/prover/src/components/merkle/: air.rs  columns.rs  mod.rs  witness.rs
crates/prover/src/components/muldiv/: mod.rs
crates/prover/src/components/opcodes/: mod.rs
crates/prover/src/components/poseidon2/: air.rs  columns.rs  mod.rs  witness.rs
crates/prover/src/components/preprocessed/: mod.rs
crates/prover/src/components/program/: air.rs  columns.rs  mod.rs  witness.rs
crates/prover/src/components/reg_clock_update/: air.rs  columns.rs  mod.rs  witness.rs
crates/prover/src/preprocessed/: bitwise.rs  mod.rs  preprocessing.rs  range_check.rs  range_check_20.rs  range_check_8_11.rs  range_check_8_8.rs  range_check_8_8_4.rs  range_check_m31.rs  rc_m31.rs
crates/prover/src/recursion/: aggregate.rs  mod.rs  segments.rs  transcript.rs
crates/prover/tests/: continuations.rs  e2e_opcodes.rs  integration.rs  max_mul.rs  probe4.rs
crates/recursion/: Cargo.toml
crates/recursion/src/: aggregate.rs  binding.rs  channel_replay.rs  circle_double.rs  circuit.rs  final_proof.rs  fri_fold.rs  lib.rs  linear_ops.rs  logup_sum.rs  merkle_path.rs  node.rs  openings.rs  prover.rs  qm31_inv.rs  qm31_mul.rs  recorder.rs  relations.rs  transcript.rs
crates/recursion/tests/: final_proof.rs  real_proof.rs  transcript.rs
crates/runner/: Cargo.toml  build.rs
crates/runner/examples/: profile_execution.rs
crates/runner/src/: commitment.rs  cpu.rs  decode.rs  elf.rs  error.rs  execute.rs  instruction.rs  io.rs  lib.rs  main.rs  memory.rs  poseidon2.rs  profiler.rs  program.rs  segment.rs  segment_tests.rs  trace.rs  transpiler.rs  vm_exe.rs  vmexe.rs
crates/runner/src/ops/: alu.rs  alu_imm.rs  branch.rs  jump.rs  load.rs  mod.rs  muldiv.rs  store.rs  upper.rs  utils.rs
crates/runner/tests/: compliance.rs  e2e.rs  input.rs  revm.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: compiler.rs  lib.rs  proof_serde.rs  vm.rs
crates/stwo-macros/: Cargo.toml
crates/stwo-macros/src/: air_fns.rs  components.rs  define_air.rs  helpers.rs  lib.rs  logup.rs  relations.rs  trace_tables.rs
crates/stwo-macros/tests/: air_fns.rs
guest/claudeth/: .gitignore  Cargo.toml  PLAN.md  PROMPT.md  README.md  REVIEW_CHECKLIST.md  SESSION3_SUMMARY.md  SESSION4_PROGRESS.md  SESSION4_SUMMARY.md  VALIDATION_CHECKLIST.md  WITNESS.md  build.rs  learnings.md  linker.ld  ralph.py  validate.py  validate_phase2.py
guest/claudeth/.cargo/: config.toml
guest/claudeth/scripts/: analyze_test_divergence.py  debug_state_mismatch.py  debug_state_root.py  debug_state_root_accounts.py  fetch_eels_tests.py
guest/claudeth/src/: lib.rs  main.rs
guest/claudeth/src/crypto/: keccak.rs  mod.rs  ripemd160.rs  rlp.rs  secp256k1.rs  secp256k1_math.rs  secp256k1_point.rs  sha256.rs
guest/claudeth/src/evm/: disassembler.rs  error.rs  gas.rs  host.rs  interpreter.rs  memory.rs  mod.rs  precompiles.rs  stack.rs  trace.rs
guest/claudeth/src/evm/opcodes/: arithmetic.rs  control.rs  environment.rs  exec.rs  log.rs  mod.rs  utils.rs
guest/claudeth/src/state/: account.rs  execution.rs  mod.rs  storage.rs
guest/claudeth/src/state/partial_mpt/: mod.rs  node.rs  proof.rs  trie.rs
guest/claudeth/src/stf/: block.rs  executor.rs  mod.rs  receipt.rs  transaction.rs
guest/claudeth/src/types/: address.rs  block.rs  bytes.rs  hash.rs  mod.rs  transaction.rs  uint.rs  withdrawal.rs
guest/claudeth/tests/: debug_eels_optionstest.rs  eels_blockchain_tests.rs  gas_tracing_integration.rs  test_storage_persistence.rs  test_storage_root_single_key.rs  test_storage_trie.rs  test_trie_root_vectors.rs
guest/guest-bin/: Cargo.toml  build.rs  linker.ld
guest/guest-bin/.cargo/: config.toml
guest/guest-bin/src/: glue.rs  heap.rs  lib.rs  main.rs
guest/guest-lib/: Cargo.toml  build.rs
guest/guest-lib/examples/: branch.rs  constant.rs  ecdsa.rs  factorial.rs  fib.rs  heap_vec.rs  keccak.rs  load_merge.rs  memory.rs  muldiv.rs  revm_smoke.rs  sha2.rs
guest/guest-lib/src/: allocator.rs  critical_section_impl.rs  io.rs  lib.rs  types.rs
guest/guest-lib/src/examples/: branch.rs  compute.rs  constant.rs  factorial.rs  fib.rs  load_merge.rs  memory.rs  mod.rs  muldiv.rs
guest/guest-lib/src/programs/: branch.rs  constant.rs  ecdsa.rs  factorial.rs  fib.rs  heap_vec.rs  keccak.rs  load_merge.rs  memory.rs  mod.rs  muldiv.rs  revm_smoke.rs  sha2.rs
guest/guest-tests/: Cargo.toml
guest/guest-tests/.cargo/: config.toml
guest/guest-tests/src/: lib.rs
(+556 files in other folders)
