[package]
name = "stark-v-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stark-v"
path = "src/main.rs"

[dependencies]
clap.workspace = true
eyre.workspace = true
builder.workspace = true
runner.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
