[package]
name = "stark-v-cli"
version = "0.1.0"
edition = "2024"
default-run = "stark-v"

[[bin]]
name = "stark-v"
path = "src/main.rs"

[dependencies]
clap.workspace = true
eyre.workspace = true
builder.workspace = true
transpiler.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
