[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[dependencies]
runner.workspace = true
simd.workspace = true
stwo.workspace = true
bytemuck.workspace = true
stwo-macros.workspace = true
stwo-constraint-framework.workspace = true
debug-utils.workspace = true
paste.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
num-traits.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
postcard = { workspace = true, features = ["alloc"] }
itertools.workspace = true
test-log.workspace = true
rayon.workspace = true
tikv-jemallocator = { workspace = true, optional = true }
peak_alloc = { workspace = true, optional = true }
smalloc = { workspace = true, optional = true }
mimalloc = { workspace = true, optional = true }
ctor = { workspace = true, optional = true }

[dev-dependencies]
divan.workspace = true
test-log.workspace = true
postcard.workspace = true
sha2 = { version = "0.10", default-features = false }

[features]
slow-tests = []
parallel = ["stwo/parallel", "stwo-constraint-framework/parallel"]
track-relations = []
default = []
peak-alloc = ["dep:peak_alloc"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
smalloc = ["dep:smalloc", "dep:ctor"]

[[bench]]
name = "fibonacci"
harness = false
