[package]
name = "recursion"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Recursive verifier AIR components for stark-v proofs"

[dependencies]
stwo.workspace = true
stwo-constraint-framework.workspace = true
stwo-macros.workspace = true
simd.workspace = true
debug-utils.workspace = true
itertools.workspace = true
num-traits.workspace = true
prover.workspace = true
runner.workspace = true

[dev-dependencies]
rand.workspace = true
