[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
goblin.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
runner-macros.workspace = true

[dev-dependencies]
guest-lib = { path = "../../guest/guest-lib" }
postcard.workspace = true
serde.workspace = true
