[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
debug-utils.workspace = true
goblin.workspace = true
itertools.workspace = true
rustc-hash.workspace = true
simd.workspace = true
stwo-constraint-framework.workspace = true
stwo.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
stwo-macros.workspace = true

[dev-dependencies]
guest-lib = { path = "../../guest/guest-lib" }
postcard.workspace = true
prover = { path = "../prover" }
serde.workspace = true
