[package]
name = "stark-v-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building and proving RISC-V programs with stark-v"

[dependencies]
guest-lib = { workspace = true }
prover = { workspace = true }
runner = { workspace = true }
stwo = { workspace = true }

# External zkVM interface
ere-zkvm-interface = { workspace = true }

# Serialization
serde = { workspace = true }
postcard = { workspace = true, features = ["alloc", "use-std"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# For compiler
[target.'cfg(not(target_arch = "riscv32"))'.dependencies]
cargo_metadata = "0.19"

[features]
default = []
parallel = ["prover/parallel"]
