[package]
name = "stwo-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
debug-utils.workspace = true
num-traits.workspace = true
rand.workspace = true
runner.workspace = true
simd.workspace = true
stwo.workspace = true
stwo-constraint-framework.workspace = true
