[package]
name = "claudeth"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
serde = { workspace = true, features = ["derive", "alloc"] }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

[dev-dependencies]
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
