[package]
name = "guest-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
guest-lib = { path = "../guest-lib" }
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false }

[[bin]]
name = "constant"
path = "src/bin/constant.rs"

[[bin]]
name = "fib"
path = "src/bin/fib.rs"

[[bin]]
name = "factorial"
path = "src/bin/factorial.rs"

[[bin]]
name = "memory"
path = "src/bin/memory.rs"

[[bin]]
name = "muldiv"
path = "src/bin/muldiv.rs"

[[bin]]
name = "branch"
path = "src/bin/branch.rs"
