[package]
name = "guest-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
# No dependencies - pure inline asm tests

[[bin]]
name = "add"
path = "src/bin/add.rs"

[[bin]]
name = "sub"
path = "src/bin/sub.rs"

[[bin]]
name = "sll"
path = "src/bin/sll.rs"

[[bin]]
name = "slt"
path = "src/bin/slt.rs"

[[bin]]
name = "sltu"
path = "src/bin/sltu.rs"

[[bin]]
name = "xor"
path = "src/bin/xor.rs"

[[bin]]
name = "srl"
path = "src/bin/srl.rs"

[[bin]]
name = "sra"
path = "src/bin/sra.rs"

[[bin]]
name = "or"
path = "src/bin/or.rs"

[[bin]]
name = "and"
path = "src/bin/and.rs"

# ALU Immediate opcodes
[[bin]]
name = "addi"
path = "src/bin/addi.rs"

[[bin]]
name = "slti"
path = "src/bin/slti.rs"

[[bin]]
name = "sltiu"
path = "src/bin/sltiu.rs"

[[bin]]
name = "xori"
path = "src/bin/xori.rs"

[[bin]]
name = "ori"
path = "src/bin/ori.rs"

[[bin]]
name = "andi"
path = "src/bin/andi.rs"

[[bin]]
name = "slli"
path = "src/bin/slli.rs"

[[bin]]
name = "srli"
path = "src/bin/srli.rs"

[[bin]]
name = "srai"
path = "src/bin/srai.rs"

# Load opcodes
[[bin]]
name = "lb"
path = "src/bin/lb.rs"

[[bin]]
name = "lh"
path = "src/bin/lh.rs"

[[bin]]
name = "lw"
path = "src/bin/lw.rs"

[[bin]]
name = "lbu"
path = "src/bin/lbu.rs"

[[bin]]
name = "lhu"
path = "src/bin/lhu.rs"

# Store opcodes
[[bin]]
name = "sb"
path = "src/bin/sb.rs"

[[bin]]
name = "sh"
path = "src/bin/sh.rs"

[[bin]]
name = "sw"
path = "src/bin/sw.rs"

# Branch opcodes
[[bin]]
name = "beq"
path = "src/bin/beq.rs"

[[bin]]
name = "bne"
path = "src/bin/bne.rs"

[[bin]]
name = "blt"
path = "src/bin/blt.rs"

[[bin]]
name = "bge"
path = "src/bin/bge.rs"

[[bin]]
name = "bltu"
path = "src/bin/bltu.rs"

[[bin]]
name = "bgeu"
path = "src/bin/bgeu.rs"

# Jump opcodes
[[bin]]
name = "jal"
path = "src/bin/jal.rs"

[[bin]]
name = "jalr"
path = "src/bin/jalr.rs"

# Upper Immediate opcodes
[[bin]]
name = "lui"
path = "src/bin/lui.rs"

[[bin]]
name = "auipc"
path = "src/bin/auipc.rs"

# MulDiv opcodes
[[bin]]
name = "mul"
path = "src/bin/mul.rs"

[[bin]]
name = "mulh"
path = "src/bin/mulh.rs"

[[bin]]
name = "mulhsu"
path = "src/bin/mulhsu.rs"

[[bin]]
name = "mulhu"
path = "src/bin/mulhu.rs"

[[bin]]
name = "div"
path = "src/bin/div.rs"

[[bin]]
name = "divu"
path = "src/bin/divu.rs"

[[bin]]
name = "rem"
path = "src/bin/rem.rs"

[[bin]]
name = "remu"
path = "src/bin/remu.rs"
